@@ -9,9 +9,10 @@
     <description>A whole slide image annotation, management, and visualization system</description>
     
     <modules>
+        <module>jena-permissions</module>
         <module>halcyon-core</module>
+        <module>HalcyonLWS</module>
         <module>Halcyon</module>
-        <module>ingest</module>
     </modules>
     
     <licenses>
@@ -43,7 +44,9 @@
           <id>tdiprima</id>
           <name>Tammy DiPrima</name>
           <email>tammy.diprima@stonybrook.edu</email>
-          <roles><role>developer</role></roles>
+          <roles>
+              <role>developer</role>
+          </roles>
           <timezone>America/New_York</timezone>
           <url>https://bmi.stonybrookmedicine.edu/people/Tammy_DiPrima</url>
           <organization>Stony Brook University - Biomedical Informatics</organization>
@@ -52,7 +55,9 @@
           <id>jbalsamo</id>
           <name>Joseph Balsamo</name>
           <email>joseph.balsamo@stonybrook.edu</email>
-          <roles><role>developer</role></roles>
+          <roles>
+              <role>developer</role>
+          </roles>
           <timezone>America/New_York</timezone>
           <organization>Stony Brook University - Biomedical Informatics</organization>
         </developer>
@@ -60,7 +65,9 @@
           <id>fwang</id>
           <name>Feiqiao Wang</name>
           <email>feiqiao.wang@stonybrook.edu</email>
-          <roles><role>developer</role></roles>
+          <roles>
+              <role>developer</role>
+          </roles>
           <timezone>America/New_York</timezone>
           <organization>Stony Brook University - Biomedical Informatics</organization>
         </developer>
@@ -75,45 +82,66 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <java.version>25</java.version>
+        <maven.compiler.release>25</maven.compiler.release>
         <exec.longClasspath>true</exec.longClasspath>
-        <springboot.version>3.3.1</springboot.version>
-        <keycloak.version>24.0.5</keycloak.version>        
-	<infinispan.version>15.0.5.Final</infinispan.version>
-	<resteasy.version>6.2.9.Final</resteasy.version>
-	<liquibase.version>4.27.0</liquibase.version>
-        <jetty.version>12.0.10</jetty.version>
-        <h2.version>2.2.224</h2.version>
-        <jena.version>5.0.0</jena.version>
-        <wicket.ver>10.1.0</wicket.ver>
-        <beakgraph.version>0.9.0</beakgraph.version>        
+        <springboot.version>4.1.0</springboot.version>
+	<resteasy.version>6.2.15.Final</resteasy.version>
+        <jetty.version>12.1.10</jetty.version>
+        <jena.version>6.1.0</jena.version>
+        <wicket.ver>10.9.1</wicket.ver>
+        <beakgraph.version>0.17.0</beakgraph.version>
         <hilbert.ver>0.2.3</hilbert.ver>
-        <commons-pool2.ver>2.12.0</commons-pool2.ver>
-        <jakarta.json.version>2.0.1</jakarta.json.version> 
-        <parrson.json.version>1.1.6</parrson.json.version>
-        <titanium-json-ld.ver>1.4.0</titanium-json-ld.ver>
-        <!--<dcm4che.ver>5.31.2</dcm4che.ver>-->
-        <shiro.version>2.0.1</shiro.version>
-        <jts.version>1.19.0</jts.version>
-        <twelvemonkeys.version>3.10.1</twelvemonkeys.version>
-        <jcommander.version>1.83</jcommander.version>
-        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-        <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
-        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
-        <maven-deploy-plugin.version>3.1.2</maven-deploy-plugin.version>
+        <commons-pool2.ver>2.13.1</commons-pool2.ver>
+        <jakarta.json.version>2.1.3</jakarta.json.version> 
+        <parrson.json.version>1.1.9</parrson.json.version>
+        <titanium-json-ld.ver>1.7.0</titanium-json-ld.ver>
+        <dcm4che.ver>5.34.3</dcm4che.ver>
+        <dcm2rdf.version>1.4.0</dcm2rdf.version>
+        <shiro.version>2.1.0</shiro.version>
+        <jts.version>1.20.0</jts.version>
+        <twelvemonkeys.version>3.13.1</twelvemonkeys.version>
+        <cygnus.version>0.1.0-SNAPSHOT</cygnus.version>
+        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
+        <maven-shade-plugin.version>3.6.2</maven-shade-plugin.version>
+        <maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
+        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
         <maven-dependency-plugin.version>3.7.0</maven-dependency-plugin.version>
-        <native-maven-plugin.version>0.10.2</native-maven-plugin.version>
-        <jpackage-maven-plugin.version>1.6.0</jpackage-maven-plugin.version>
+        <native-maven-plugin.version>1.1.2</native-maven-plugin.version>
+        <jpackage-maven-plugin.version>1.7.4</jpackage-maven-plugin.version>
+        <jcommander.version>3.0</jcommander.version>
+        <log4j-api.version>2.26.0</log4j-api.version>
+        <commons-lang3.version>3.20.0</commons-lang3.version>
+        <lombok.version>1.18.40</lombok.version>
+        <caffeine.version>3.1.8</caffeine.version>
     </properties>
     
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.ver}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.json</groupId>
+                <artifactId>jakarta.json-api</artifactId>
+                <version>${jakarta.json.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.parsson</groupId>
+                <artifactId>parsson</artifactId>
+                <version>${parrson.json.version}</version>
+            </dependency>            
+            <dependency>
                 <groupId>org.graalvm.buildtools</groupId>
                 <artifactId>native-maven-plugin</artifactId>
-                <version>${native-maven-plugin}</version>
+                <version>${native-maven-plugin.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -133,7 +161,7 @@
             <dependency>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin}</version>
+                <version>${maven-compiler-plugin.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -142,6 +170,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>            
             <dependency>
                 <groupId>org.apache.jena</groupId>
                 <artifactId>apache-jena-libs</artifactId>
@@ -155,10 +188,21 @@
                 <type>jar</type>
             </dependency>
             <dependency>
-                <groupId>org.apache.jena</groupId>
+                <!-- In-house fork (module jena-permissions/): upstream
+                     deprecated the module and removed it in Jena 6.x. -->
+                <groupId>com.ebremer.HalcyonProject</groupId>
                 <artifactId>jena-permissions</artifactId>
                 <type>jar</type>
-                <version>${jena.version}</version>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <!-- W3C Linked Web Storage Protocol server (module HalcyonLWS/).
+                     Independent of the legacy com.ebremer.halcyon.server.lws
+                     servlet, which stays as-is. -->
+                <groupId>com.ebremer.HalcyonProject</groupId>
+                <artifactId>HalcyonLWS</artifactId>
+                <type>jar</type>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.jena</groupId>
@@ -168,57 +212,12 @@
             <dependency>
                 <groupId>com.github.ben-manes.caffeine</groupId>
                 <artifactId>caffeine</artifactId>
-                <version>3.1.8</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-core</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-api</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-cachestore-remote</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-client-hotrod</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-commons</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-jboss-marshalling</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-multimap</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-query-dsl</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-remote-query-client</artifactId>
-                <version>${infinispan.version}</version>
+                <version>${caffeine.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.32</version>
+                <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -227,19 +226,68 @@
                 <version>${twelvemonkeys.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-core</artifactId>
-                <version>${liquibase.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.yaml</groupId>
-                        <artifactId>snakeyaml</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.apache.commons</groupId>
-                        <artifactId>commons-text</artifactId>
-                    </exclusion>
-                </exclusions>
+                <groupId>com.twelvemonkeys.imageio</groupId>
+                <artifactId>imageio-psd</artifactId>
+                <version>${twelvemonkeys.version}</version>
+            </dependency>
+            <!-- dcm4che: DICOM parsing + ImageIO plugin for JPEG2000 WSI tiles.
+                 dcm4che-imageio-opencv pulls the native OpenCV codec
+                 (org.weasis.core:weasis-core-img) transitively. -->
+            <dependency>
+                <groupId>org.dcm4che</groupId>
+                <artifactId>dcm4che-core</artifactId>
+                <version>${dcm4che.ver}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.dcm4che</groupId>
+                <artifactId>dcm4che-dict</artifactId>
+                <version>${dcm4che.ver}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.dcm4che</groupId>
+                <artifactId>dcm4che-image</artifactId>
+                <version>${dcm4che.ver}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.dcm4che</groupId>
+                <artifactId>dcm4che-imageio</artifactId>
+                <version>${dcm4che.ver}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.dcm4che</groupId>
+                <artifactId>dcm4che-imageio-opencv</artifactId>
+                <version>${dcm4che.ver}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ebremer</groupId>
+                <artifactId>dcm2rdf</artifactId>
+                <version>${dcm2rdf.version}</version>
+            </dependency>
+            <!-- cygnus: ImageIO plug-ins for whole-slide and codec formats.
+                 svs and ndpi expose a slide's pyramid as ImageIO image indices
+                 and read regions through ImageReadParam, the same contract the
+                 TIFF reader is driven by. svs pulls jpeg2000 in for Aperio's
+                 private JPEG 2000 tiles, so that codec's ImageIO plug-in is
+                 registered alongside dcm4che's native one. -->
+            <dependency>
+                <groupId>com.ebremer</groupId>
+                <artifactId>svs</artifactId>
+                <version>${cygnus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ebremer</groupId>
+                <artifactId>ndpi</artifactId>
+                <version>${cygnus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ebremer</groupId>
+                <artifactId>jpeg2000</artifactId>
+                <version>${cygnus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ebremer</groupId>
+                <artifactId>jpegxl</artifactId>
+                <version>${cygnus.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.apicatalog</groupId>
@@ -266,7 +314,7 @@
                 <groupId>org.jcommander</groupId>
                 <artifactId>jcommander</artifactId>
                 <version>${jcommander.version}</version>
-            </dependency>
+            </dependency>            
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-server</artifactId>
@@ -307,6 +355,15 @@
                 <artifactId>jetty-alpn-client</artifactId>
                 <version>${jetty.version}</version>
             </dependency>
+            <dependency>
+                <!-- The ee11 servlet environment: Fuseki 6.x and Spring
+                     Boot 4's Jetty layer are both ee11, and Halcyon's
+                     Fuseki/LWS wiring (SPARQLEndPoint, LWSServer) uses its
+                     classes directly. -->
+                <groupId>org.eclipse.jetty.ee11</groupId>
+                <artifactId>jetty-ee11-servlet</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <repositories>
@@ -315,18 +372,11 @@
             <name>Halcyon</name>
             <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
         </repository>
-        <!--
         <repository>
             <id>dcm4che</id>
-            <name>dcm4che</name>
+            <name>dcm4che Repository</name>
             <url>https://www.dcm4che.org/maven2</url>
-        </repository>-->
-        <!--
-        <repository>
-            <id>apache</id>
-            <name>apache</name>
-            <url>https://repository.apache.org/snapshots</url>
-        </repository>-->
+        </repository>
     </repositories>
     <distributionManagement>
         <repository>
@@ -334,4 +384,61 @@
             <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
         </repository>
     </distributionManagement>
+        <build>
+        <!--<finalName>library-${project.version}</finalName>-->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${maven-shade-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>libraryshade</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"></transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Multi-Release>true</Multi-Release>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>false</skip>
+                </configuration>
+                <version>${maven-deploy-plugin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
